<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_comment_second_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:padding="2dp"
        android:text="@string/photo_comment_second_fragment_item_username"
        android:textColor="@color/blue_a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_comment_second_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/tv_comment_second_username"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/tv_comment_second_username"

        android:padding="2dp"
        android:text="@string/photo_comment_second_fragment_item_content"
        android:textColor="@color/white_b"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_comment_second_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_comment_second_context"
        android:layout_alignStart="@+id/tv_comment_second_context"
        android:layout_marginBottom="15dp"

        android:padding="2dp"
        android:text="@string/photo_comment_second_fragment_item_time"
        android:textColor="@color/white_c"
        android:textSize="14sp" />
</RelativeLayout>