<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_comment_first_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/tv_comment_first_context"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"

        android:text="@string/photo_comment_first_fragment_item_username"
        android:textColor="@color/blue_a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_comment_first_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tv_comment_first_username"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:text="@string/photo_comment_first_fragment_item_content"
        android:textColor="@color/white_b"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_comment_first_host"
        android:layout_width="47dp"
        android:layout_height="22dp"

        android:layout_alignTop="@+id/tv_comment_first_username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-1dp"

        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@+id/tv_comment_first_username"

        app:cardCornerRadius="5dp"
        app:cardElevation="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/white_a"
            android:text="@string/photo_comment_first_fragment_item_host" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_comment_first_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_comment_first_context"
        android:layout_alignStart="@+id/tv_comment_first_context"
        android:layout_marginBottom="15dp"

        android:padding="2dp"
        android:text="@string/photo_comment_first_fragment_item_time"
        android:textColor="@color/white_c"
        android:textSize="14sp" />

    <RelativeLayout
            android:id="@+id/rl_comment_first_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_comment_first_context"
            android:layout_toEndOf="@+id/tv_comment_first_create_time"
            android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/tv_comment_first_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="2dp"
            android:text="@string/photo_comment_first_fragment_item_more"
            android:textColor="@color/white_c"
            android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_comment_first_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/tv_comment_first_more"
                android:src="@drawable/ic_baseline_arrow_drop_down_white" />

        </RelativeLayout>

</RelativeLayout>
